Sonar check (#2)
* Fix Sonar Check
* 提高测试代码覆盖率